[package]
name = "dag-network"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dag-network"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
libp2p = { version = "0.55", features = [ "tokio", "gossipsub", "identify", "mdns", "noise", "macros", "tcp", "ping", "yamux", "quic", "kad", "dns", "rsa", "request-response", "cbor", "kad"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3"
local-ip-address = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
warp = "0.3.7"
sha2 = "0.11.0-pre.5"
ed25519-dalek = "2.1.1"
ed25519 = "2.2.3"
bincode = "2.0.1"
hex = "0.4.3"
async-trait = "0.1.88"
wasmtime = "32.0.0"
anyhow = "1.0.98"
base64 = "0.22.1"

